# logicars

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Claude.md  README.md  async_log.csv  checkerboard_async.json  checkerboard_async_log.csv  checkerboard_model.json  checkerboard_sync_log.csv  gate_distribution.csv  test.py  test2.py  train.py  train_optimized.py
.devcontainer/: Dockerfile  README-podman.md  devcontainer.json  podman-start.sh
.github/workflows/: CI.yml
agents/: INDEX.md  implementation-log.md  plan.md  qa-review.md
agents/archive/: implementation-log-2026-01-03.md  qa-review-1.md
archive/: circuits.rs  difflogicca.rs  logic_gates.rs  pyproject.toml  readme.md  train_optimized.py
claude/: implementation-log.md  plan.md  qa-review-1.md
plans/: INDEX.md  gpu-phase1-plan.md  gpu-phase2-plan.md  gpu-phase4-plan.md  gradient_clipping.md  perf-phase1-release-profile.md  perf-phase2-parallel-backward.md  perf-phase4-f32-precision.md  perf-phase5-softmax-caching.md  performance-improvements-options.md  phase-2.1a-analysis.md  phase-2.2-async.md  serialisation-phase1-plan.md  serialisation-phase2-plan.md  serialisation-plan.md
reference/: README.md  burn-evaluation.md  difflogic_ca.py  gpu-phase2-plan.md  gpu-phase3-plan.md  gpu-plan.md  perf-phase3-batch-parallel.md  performance-improvement-profiling-analysis.md  performance-improvements-options.md  rust-nightly-features-evaluation.md
reference/research-paper/: difflogic-ca-paper-as-markdown.md
src/: checkerboard.rs  circuit.rs  gates.rs  grid.rs  lib.rs  lib_old.rs  optimizer.rs  perception.rs  phase_0_1.rs  phase_0_2.rs  phase_0_3.rs  phase_1_1.rs  python_bindings.rs  trainer.rs  training.rs  update.rs
src/gpu/: batched.rs  context.rs  forward.rs  gate_layer.rs  mod.rs
src/gpu/shaders/: double.wgsl  gate_forward.wgsl  gate_forward_batched.wgsl
