[package]
name = "logicars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "logicars"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "train_gate"
path = "src/bin/train_gate.rs"

[[bin]]
name = "train_layer"
path = "src/bin/train_layer.rs"

[[bin]]
name = "train_circuit"
path = "src/bin/train_circuit.rs"

[[bin]]
name = "train_perception"
path = "src/bin/train_perception.rs"

[dependencies]
pyo3 = { version = "0.23.3", optional = true }
rand = "0.9"
ndarray = "0.16.1"
numpy = { version = "0.23.0", optional = true }
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
wgpu = { version = "24.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.18", features = ["derive"] }

[dev-dependencies]
approx = "0.5"

[features]
default = []
python = ["pyo3", "numpy"]
gpu = ["dep:wgpu", "dep:pollster"]
